Update: Enhanced cyberpunk styling with minimalistic design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neon Skyline Soundboard</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,25 +16,25 @@
     </div>
 
     <div class="soundboard">
-        <h1>Neon Skyline Soundboard</h1>
+        <h1>Neon Skyline</h1>
         <div class="sound-buttons">
             <button class="sound-btn" data-sound="rain">
-                <span class="icon">🌧</span>
+                <span class="icon">⟁</span>
                 Rain
                 <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.5">
             </button>
             <button class="sound-btn" data-sound="neon">
-                <span class="icon">💡</span>
+                <span class="icon">⌬</span>
                 Neon Buzz
                 <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.5">
             </button>
             <button class="sound-btn" data-sound="sirens">
-                <span class="icon">🚨</span>
+                <span class="icon">⚠</span>
                 Sirens
                 <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.5">
             </button>
             <button class="sound-btn" data-sound="hovercars">
-                <span class="icon">🚗</span>
+                <span class="icon">⎈</span>
                 Hovercars
                 <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.5">
             </button>
